fix: scrollbars appearing because of default margins and padding applied

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,3 @@
-#root {
-    background-color: black;
-}
-
 .google-sans {
     font-family: "Google Sans", sans-serif;
     font-optical-sizing: auto;
@@ -9,4 +5,10 @@
     font-style: normal;
     font-variation-settings:
         "GRAD" 0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
 }
